[package]
name = "leetcode"
version = "0.1.0"
authors = ["bestgopher <84328409@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.15"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
