[package]
name = "leetcode"
version = "0.1.0"
authors = ["bestgopher <84328409@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["./sort"]

[dependencies]
git2 = "0.14.4"
reqwest = { version = "0.11.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = "3.0.0-beta.2"
tera = "1.12.1"
lazy_static = "1.4.0"
regex = "1"
rand = "0.8.4"
tokio = { version = "1.33.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["fs"] }


[[bin]]
name = "leetcode"
path = "src/main.rs"

[dev-dependencies]
tokio = { version = "1.33.0", features = ["macros", "rt"] }
